- Fixes layout issues for extra small screen widths.

--- a/SCSS/utilities/_media.scss
+++ b/SCSS/utilities/_media.scss
@@ -1,6 +1,14 @@
 
 // Container width for mobile devices
-@media (max-width: 576px) {
+
+@media (min-width: 320px) and (max-width: 410px) {
+  .align_scroll, .type-container, #arrow_alignment, #scs_arrow_align, .container {
+    width: 300px;
+    margin: auto;
+  }
+}
+
+@media (min-width: 411px) and (max-width: 576px) {
 .align_scroll, .type-container, #arrow_alignment, #scs_arrow_align, .container {
   width: 400px;
   margin: auto;
@@ -66,6 +74,20 @@
     padding: 0;
   }
 }
+
+// Top navigation at extra small breakpoint
+@media (min-width: 320px) and (max-width: 410px) {
+  .top_icons {
+    padding: 0px;
+  }
+  .william small {
+    margin-left: 40px;
+  }
+  #scs_reveal {
+    margin-bottom: 0px !important;
+  }
+}
+
 // top_navigation visibility
 @media (min-width: 992px) {
   #close,
@@ -82,6 +104,18 @@
 }
 
 // Banner Section Mobile
+@media (min-width: 320px) and (max-width: 410px) {
+  #app {
+    font-size: 1.1rem;
+  }
+  .me {
+    font-size: 1rem;
+  }
+  #scroll {
+    font-size: 16px;
+  }
+}
+
 @media (max-width: 576px) {
   .scroll_align {
     margin: auto;
@@ -89,13 +123,10 @@
   }
 }
 
-@media (max-width: 576px) {
+@media (min-width: 411px) and (max-width: 576px) {
   #app {
     font-size: 1.4rem;
   }
-}
-
-@media (max-width: 576px) {
   .me {
     font-size: 1.3rem;
   }
@@ -130,11 +161,17 @@
   }
 }
 
-@media (max-width: 576px) {
+@media (min-width: 411px) and (max-width: 576px) {
  .project  {
     width: 159px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 410px) {
+  .project {
+      width: 145px;
+    }
+  }
 
 // Contact layout
 @media (max-width: 991px) {
@@ -206,6 +243,18 @@
     margin: auto;
   }
 }
+
+// About-me
+@media (min-width: 320px) and (max-width: 410px) {
+    .about_heading {
+    font-size: 1.5em;
+    margin: 10px 0px 5px 10px;
+  }
+  #biograph {
+    font-size: 14px;
+  }
+}
+
 @media (min-width:768px) {
   .profile_image {
     display: block;
@@ -228,6 +277,21 @@
 }
 
 // scs-scheme content for Mobile
+@media (min-width: 320px) and (max-width: 410px) {
+  .all_text {
+    margin-bottom: 20px !important;
+  }
+  .scheme_heading {
+    font-size: 1.5em;
+  }
+  .intro_text {
+    font-size: 16px;
+  }
+  .net_list {
+    font-size: 16px;
+  }
+}
+
 @media (max-width: 576px) {
   .introduction, .second_wrapper {
     line-height: 1.2rem !important;
@@ -245,29 +309,13 @@
 }
 
 //Coding Examples
-@media (min-width: 1200px) {
-.js_wrapper {
-  display: flex;
-  justify-content: center;
-  }
- #example1 {
-   width: 60%;
- }
- .output_arrow_right {
-   font-size: 80px;
- }
-}
-
-@media (max-width: 991px) {
-  #expanded_database {
-    width: 95%;
+@media (min-width: 411px) and (max-width: 767px) {
+  .code_title {
+    width: 70%;
   }
 }
 
 @media (max-width: 767px) {
-  .code_title {
-    width: 70%;
-  }
   #example1 {
     font-size: 11px;
   }
@@ -282,7 +330,59 @@
   }
 }
 
+@media (max-width: 991px) {
+  #expanded_database {
+    width: 95%;
+  }
+}
+
+@media (min-width: 1200px) {
+.js_wrapper {
+  display: flex;
+  justify-content: center;
+  }
+ #example1 {
+   width: 60%;
+ }
+ .output_arrow_right {
+   font-size: 80px;
+ }
+}
+
 // Coding Examples mobile
+@media (min-width: 320px) and (max-width: 410px) {
+  .top_arrow {
+    top: 1% !important;
+    left: 0%;
+    right: 1%;
+  }
+  .code_title {
+    width: 90%
+  }
+}
+
+@media (min-width: 411px) and (max-width: 480px) {
+  .top_arrow {
+    top: 0% !important;
+    left: 2%;
+  }
+}
+
+@media (max-width: 480px) {
+  .ui-accordion-content {
+    max-height: 450px;
+  }
+  .coding_container {
+    width: 350px;
+  }
+  .code-close {
+    margin-top: 0px !important;
+  }
+  .explanation, .sql_objective {
+    font-size: 14px;
+  }
+}
+
 @media (max-width: 576px) {
   #example1 {
     width: 90%;
@@ -293,24 +393,5 @@
   }
   .query_out {
     width: 98%;
-  }
-}
-
-@media (max-width: 481px) {
-  .ui-accordion-content {
-    max-height: 450px;
-  }
-  .coding_container {
-    width: 350px;
-  }
-  .top_arrow {
-    top: 0% !important;
-    left: 2%;
-  }
-  .code-close {
-    margin-top: 0px !important;
-  }
-  .explanation, .sql_objective {
-    font-size: 14px;
   }
 }
